Migrate more tests